# manage-your-node

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  database.py  maintenance.py  provisioning.py  security.py  server.py  services.py  ssh_runner.py  ssh_tunnel.py  web_config.py  xui_api.py
app/services/: __init__.py  base.py  chains.py  clients.py  deployments.py  helpers.py  servers.py  subscriptions.py  teardown.py
app/static/: app.js  appearance.js  index.html  login.html  login.js  styles.css
examples/: Caddyfile  nginx.conf
tests/: test_auth.py  test_config.py  test_database.py  test_health_monitor.py  test_installer.py  test_maintenance.py  test_provisioning.py  test_qrcode.py  test_security.py  test_server.py  test_services.py  test_shadowsocks.py  test_ssh_runner.py  test_teardown.py  test_traffic_sync.py  test_xui_api.py
