[project]
name = "manage-your-node"
version = "0.10.1"
description = "Self-hosted VPS node management panel built on Starlette and 3x-ui"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "cryptography==49.0.0",
    "paramiko==5.0.0",
    "PyYAML==6.0.3",
    "segno==1.6.6",
    "starlette==1.3.1",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "httpx2==2.5.0",
    "pytest==8.4.2",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "types-PyYAML==6.0.12.20260518",
    "types-paramiko==5.0.0.20260617",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # long lines: templates and shell snippets are clearer unwrapped
]

[tool.mypy]
python_version = "3.12"
files = ["app"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
